--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,11 +32,10 @@ rosbuild_genmsg()
 #rosbuild_add_library(${PROJECT_NAME} src/example.cpp)
 #target_link_libraries(${PROJECT_NAME} another_library)
 rosbuild_add_boost_directories()
-rosbuild_add_executable(simpleexample src/SimpleExample.cpp)
-rosbuild_link_boost(simpleexample thread program_options system)
-
-rosbuild_add_executable(publisher src/SimpleExample.cpp)
-rosbuild_link_boost(publiser thread program_options system)
+#rosbuild_add_executable(simpleexample src/SimpleExample.cpp)
+#rosbuild_link_boost(simpleexample thread program_options system)
+rosbuild_add_executable(publisher src/publisher.cpp)
+rosbuild_link_boost(publisher thread program_options system)
 #rosbuild_add_executable(example examples/example.cpp)
 #target_link_libraries(example ${PROJECT_NAME})
 
